src/css/styles.css
html, * {
  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Droid Sans", "Helvetica Neue", Helvetica, Arial, sans-serif;
  line-height: 1.5;
  -webkit-text-size-adjust: 100%;
}

input {
  font-size: 1rem;
}

body {
  margin: 0;
  padding: 0px;
}

main {
  display: flex;
  width: 100%;
  top: 50px;
  bottom: 21px;
  position: fixed;
}

header {
  position: fixed;
  left: 0;
  right: 0;
  background-color: rgb(17, 21, 24);
  display: flex;
  align-items: center;
  height: 50px;
  color: #fff;
  padding: 0 10px;
  justify-content: space-between;
}

header .title {
  height: 100%;
  display: flex;
  flex-direction: column;
}

header .title h3 {
  margin: 0;
  font-weight: 400;
}

header>div {
  display: flex;
  align-items: center;
}

header .logo {
  color: #00ec00;
  width: 30px;
  height: 30px;
  line-height: 30px;
  text-align: center;
  background: #000;
  border-radius: 10px;
  margin-right: 10px;
  align-items: center;
  justify-content: center;
  display: block;
  position: relative;
  transition: all .2s ease-in-out;
  cursor: pointer;
}

header .logo.unsaved::after {
  width: 7px;
  height: 7px;
  background-color: red;
  border-radius: 50%;
  content: "";
  top: -2px;
  right: -2px;
  position: absolute;
}

header .logo:hover {
  transform: scale(1.2);
}

header .logo:active {
  transform: scale(0.9);
}


.preview {
  background: white;
  flex: 1;
  padding: 10px;
  height: 100%;
  overflow-y: auto;
}

/****** markdown *********/

.markdown-body {
  box-sizing: border-box;
  min-width: 200px;
  max-width: 980px;
  margin: 0 auto;
  padding: 45px;
}

@media (max-width: 767px) {
  .markdown-body {
    padding: 15px;
  }
}

/****** markdown *********/

.terminal {
  flex: 1;
  font-family: monospace;
  margin: 0px;
  width: 100%;
  height: 100%;
  background: black;
  color: #00ec00;
  font-size: 25px;
  padding: 10px;
  outline-color: red;
  z-index: 1;
}

.notification {
  position: fixed;
  right: 5px;
  width: 30%;
  background: #000;
  color: #fff;
  text-align: center;
  padding: 15px;
  margin: auto;
  border-radius: 4px;
  border: 2px solid rgba(255, 255, 255, 0.25);
  top: -100%;
  transition: all 0.25s cubic-bezier(1, 0, 0.7, 1);
  cursor: pointer;
  z-index: 10;
}

.notification.info {
  border: 1px solid rgba(0, 123, 255, 0.85);
  background: rgba(0, 123, 255, 0.85);
  top: 5px;
  transition: all 0.5s linear;
}

.notification.success {
  border: 1px solid rgba(0, 255, 0, 0.85);
  background: rgba(0, 255, 0, 0.85);
  top: 5px;
  transition: all 0.5s linear;
}

.notification.error {
  border: 1px solid rgba(255, 0, 0, 0.85);
  background: rgba(255, 0, 0, 0.85);
  top: 5px;
  transition: all 0.5s linear;
}

.notification.warning {
  border: 1px solid rgba(255, 255, 0, 0.85);
  background: rgba(255, 255, 0, 0.85);
  top: 5px;
  transition: all 0.5s linear;
}

/****** custom scrollbar *********/

::-webkit-scrollbar {
  width: 5px;
}

/* Track */

::-webkit-scrollbar-track {
  background: black;
}

/* Handle */

::-webkit-scrollbar-thumb {
  background: grey;
}

/* Handle on hover */

::-webkit-scrollbar-thumb:hover {
  background: yellow;
}

/****** custom scrollbar *********/

/****** commander *********/

.commander {
  top: 1px;
  position: fixed;
  z-index: 10;
  display: flex;
  justify-content: center;
  width: 75%;
  max-width: 600px;
  min-width: 250px;
  margin: 0 auto;
  left: 0;
  right: 0;
}

.commander .palette {
  width: 100%;
  background-color: #212121;
  display: flex;
  justify-content: center;
  padding: 8px 8px 0 8px;
  display: flex;
  flex-direction: column;
}

.commander .palette ul {
  color: white;
  list-style: none;
  margin: 0;
  padding: 0;
  margin: 8px 0;
}

.commander .palette ul li {
  padding: 0 2px;
  display: flex;
  flex-flow: row nowrap;
  justify-content: space-between;
  align-items: center;
}

.commander .palette ul li.selected {
  background-color: rgba(255, 255, 255, 0.25);
}

.commander .palette ul li:hover {
  background-color: rgba(255, 255, 255, 0.40);
}

.commander .palette input {
  background-color: #424242;
  color: white;
  width: 100%;
  padding: 0 5px;
  border: none;
}

.commander .palette ul li a {
  color: white;
  text-decoration: none;
  flex-grow: 1;
  padding: 10px 0;
}

.commander .palette ul li div {
  padding: 10px 0;
  cursor: pointer;
  flex-grow: 1;
}

/****** commander *********/

.hidden {
  display: none;
}

/****** menu *********/

.secondary {
  opacity: 0.5;
  align-self: left;
  font-size: small;
}

.divider {
  width: 1px;
  height: 15px;
  background: rgba(255, 255, 255, 0.25);
  margin: 0 10px;
}

.menu {
  display: flex;
  align-items: center;
  max-height: 100%;
  cursor: pointer;
}

.menu:after {
  max-height: 100%;
  content: '\2807';
  font-size: 30px;
  color: rgba(255, 255, 255, 0.75);
}

.menu:hover:after {
  color: rgba(255, 255, 255, 1);
}

/****** menu *********/

